헬스 정보 엔드포인트 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ management:
   endpoint:
     shutdown:
       enabled: true # shutdown ??? (default: false)
+    health:
+#      show-details: always
+      show-components: always
