--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,22 @@ management:
     web:
       exposure:
         include: "*"
-        exclude: "env, beans"
+        exclude: "beans"
   endpoint:
     shutdown:
-      enabled: true # shutdown ??? (default: false)
+      enabled: true
     health:
 #      show-details: always
       show-components: always
+  info:
+    java:
+      enabled: true
+    os:
+      enabled: true
+    env:
+      enabled: true
+    git:
+      mode: full
+info: # env info
+  name: hello-actuator
+  company: yh
