--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
     name: spring-boot-actuator
+
 management:
   endpoints:
     web:
@@ -22,6 +23,11 @@ management:
       enabled: true
     git:
       mode: full
+
 info: # env info
   name: hello-actuator
   company: yh
+
+logging:
+  level:
+    hello.controller: debug
