보안을 위한 포트 및 경로 변경 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,14 @@ spring:
     name: spring-boot-actuator
 
 management:
+#  server:
+#    port: 9292
   endpoints:
     web:
       exposure:
         include: "*"
         exclude: "beans"
+      base-path: "/manage"
   endpoint:
     shutdown:
       enabled: true
